tests/pass/0125_string_mixed_type_equality.ee
fn main() {
    println("1" == 1);
    println("true" == true);
    println("nothing" == nothing);
    println("1" != 1);
}
