tests/fail/0097_len_bool.ee
fn main() {
    println(len(true));
}
